# cd-collection-agent

./: .env.example  .gitignore  README.md  implementation_plan.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
agents/: cd_agent.py
app/: config.py  deps.py  main.py  schemas.py
app/agents/: db_agent.py  preference_agent.py  recommend_agent.py  vector_agent.py  workflow.py
app/db/: database.py  init_db.py  manager.py  models.py  spotify_repository.py
app/routers/: agent.py  cd.py  cd.py.archive  cd.py.backup  discogs.py
app/services/: cd_service.py  rec_service.py  spotify_service.py  vector_service.py
app/ui/: UI.html  UI.html.archive  placeholder.txt
app/utils/: discogs.py  embeddings.py  spotify_oauth.py
data/: spotify_history.parquet
docs/: ETL_FLOW.md  roadmap.md
etl/: __init__.py  api_fetcher.py  importer.py  merge.py  normalizer.py  queries.py
music_agent/: __init__.py  cd_agent.py  prompt.py
music_agent/sub_agents/cd_info_summary_agent/: __init__.py  agent.py  prompt.py
music_agent/sub_agents/cd_websearch_agent/: __init__.py  agent.py  prompt.py
music_agent/tools/: add_cd_to_sheets_tool.py  check_collection_for_cd_tool.py  discogs_ingest_CLI.py  gsheets_API_functions.py
scripts/: build_embeddings.py  db_inspect.py  import_excel.py  ingest_discogs.py  main.py
tests/: chroma_diag.py  test_api.py
tools/: add_cd_to_sheets_tool.py  discogs_API_functions.py  discogs_to_gsheets.py  discogs_tool.py  gsheets_tool.py
