[project]
name = "cd-collection-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "fastapi>=0.123.0",
    "langchain>=1.1.0",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
